--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <a href="https://www.palmeiras.com.br/home/" class="logo" target="_blank"><img src="image1.png" alt="" height="50px" width="50px"></a>
             <button class="hamburger"></button>
             <ul class="nav-list">
-                <li> <a href="#"> sobre </a></li>
-                <li> <a href="#"> projetos </a></li>
-                <li> <a href="#"> contatos </a></li>
+                <li> <a href="https://www.palmeiras.com.br/home/" class="logo" target="_blank"><img src="image1.png" alt="" height="50px" width="50px"> sobre </a></li>
+                <li> <a href="https://www.palmeiras.com.br/home/" class="logo" target="_blank"><img src="image1.png" alt="" height="50px" width="50px"> projetos </a></li>
+                <li> <a href="https://www.palmeiras.com.br/home/" class="logo" target="_blank"><img src="image1.png" alt="" height="50px" width="50px"> contatos </a></li>
 
             </ul>
        </nav>
